# pytest-coverage-impact

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE_ONBOARDING.md  BRANDING.md  CHANGELOG.md  EXAMPLE_pytest.ini  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE_PROCESS.md  pylint_report.txt  pyproject.toml  pytest.ini.example  setup.py
.agent/: instructions.md
.github/workflows/: ci.yml  publish.yml
pytest_coverage_impact/: __init__.py  analyzer.py  call_graph.py  config.py  impact_calculator.py  plugin.py  progress.py  reporters.py  ui.py  utils.py
pytest_coverage_impact/core/: prioritizer.py
pytest_coverage_impact/gateways/: call_graph.py  reporters.py  utils.py
pytest_coverage_impact/interface/: telemetry.py
pytest_coverage_impact/logic/: analyzer.py
pytest_coverage_impact/ml/: complexity_estimator.py  complexity_model.py  feature_extractor.py  gateway.py  orchestrator.py  test_analyzer.py  training_data_collector.py  versioning.py
pytest_coverage_impact/ml/models/: complexity_model_v1.0.pkl
scripts/: release.sh  test_build.sh  test_performance.py
tests/: __init__.py  conftest.py
tests/functional/: __init__.py  test_call_graph_snowfort.py
tests/unit/: test_analyzer.py  test_analyzer.py.bak  test_call_graph.py  test_complexity_estimator.py  test_complexity_model.py  test_config.py  test_feature_extractor.py  test_impact_calculator.py  test_prioritizer.py  test_reporters.py  test_test_analyzer.py  test_training_data_collector.py  test_utils.py  test_versioning.py
