[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-coverage-impact"
version = "0.1.2"
description = "ML-powered test coverage analysis plugin for pytest"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Coverage Impact Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Pytest",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
keywords = ["pytest", "coverage", "testing", "machine-learning", "complexity"]
dependencies = [
    "pytest>=7.0.0",
    "coverage>=6.0.0",
    "scikit-learn>=1.0.0",
    "numpy>=1.20.0",
    "pydantic>=2.0.0",
    "questionary>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
    "pylint>=2.15.0",
    "clean-architecture-linter-plugin>=1.1.0",
]

[project.entry-points.pytest11]
coverage_impact = "pytest_coverage_impact.plugin"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Exclude functional tests from default runs (they're slow)
norecursedirs = ["tests/functional"]
addopts = [
    "--strict-markers",
    "-v",
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (may require external services)",
    "functional: Functional tests (end-to-end workflows, slow)",
]

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "C90"]  # pycodestyle, pyflakes, mccabe complexity
ignore = ["E501"]  # Line length handled by formatter

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.setuptools]
packages = ["pytest_coverage_impact"]

[tool.setuptools.package-data]
pytest_coverage_impact = ["ml/models/*.pkl", "py.typed"]
"*" = ["assets/*.png"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["pytest_coverage_impact/__init__.py:__version__"]
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install build && python -m build"
commit_message = "{version}\n\nAutomatically generated by python-semantic-release"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[tool.pylint.main]
load-plugins = ["clean_architecture_linter"]

[tool.pylint.format]
max-line-length = 120

[tool.clean-arch]
project_type = "generic"
visibility_enforcement = true

[tool.clean-arch.layer_map]
"pytest_coverage_impact" = "UseCase"
"pytest_coverage_impact.plugin" = "Interface"
"pytest_coverage_impact.reporters" = "Interface"
"pytest_coverage_impact.ml" = "Infrastructure"
